# emitlog

./: .gitignore  README.md  README_CN.md  README_FR.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  CLAUDE.md  CLAUDE_CN.md  LESSONS.md  LESSONS_CN.md  PROGRESS.md  PROGRESS_CN.md  TESTING.md  TESTING_CN.md  TUTORIAL.md  TUTORIAL_CN.md
emitlog/: __init__.py  _compat.py  _config.py  _context.py  _event.py  _logger.py  _record.py  _sampling.py  _serializer.py  _span.py
emitlog/formatters/: __init__.py  _ansi.py  _base.py  _json.py  _pretty.py
emitlog/sinks/: __init__.py  _base.py  _file.py  _stderr.py
examples/: 01_quickstart.py  02_schema_events.py  03_context.py  04_sampling.py  05_custom_sink.py  06_fastapi_integration.py  07_stdlib_compat.py  08_colors_and_formatting.py
tests/: conftest.py  test_compat.py  test_context.py  test_event.py  test_formatters.py  test_logger.py  test_sampling.py  test_serializer.py  test_sinks.py  test_span.py
